<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <HorizontalScrollView
        android:id="@+id/horiz_route_list_scrollview"

        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/route_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </HorizontalScrollView>

    <ListView
        android:id="@+id/prediction_list"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="0dip" >
    </ListView>

    <TextView
        android:id="@+id/empty_prediction_list"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="gone"
        android:text="@string/searching_for_buses" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:measureWithLargestChild="true"
        android:orientation="horizontal"
        android:paddingLeft="2dip"
        android:paddingRight="2dip"
        android:paddingTop="0dip" >

        <Button
            android:id="@+id/refresh"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/refresh" />

        <Button
            android:id="@+id/not_working"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/not_working" />

    </LinearLayout>

</LinearLayout>
